Replace getFirst() for get(0)